proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/error/cannot_assign_to_False.py
#Test that we cannot use False as a variable name
def foo(x):
	False = x

foo(5)